удаление старого хранителя вопросов, переписаны тесты без его использования